# brunoyam-lessons

./: .gitmodules  lesson9.sln
Log_less18/: log.cpp  log.h  main.cpp  messagesender.cpp  messagesender.h  untitled17.pro
lesson 15/sql_with_qt/: main.cpp
lesson 15/untitled10/: main.cpp  untitled10.pro  untitled10lib.h  untitled10lib.lib
lesson 15/untitled10lib/: untitled10lib.cpp  untitled10lib.pro
lesson 15/untitled11/: CMakeLists.txt
lesson 15/untitled12/: lib1.cpp__  untitled12.pro
lesson 15/untitled13/: lib1.h__  main.cpp  untitled13.pro
lesson 15/untitled15/: CMakeLists.txt  main.cpp  untitled14.h  untitled14_global.h
lesson 23/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
lesson10/: lesson10.sln
lesson10/lesson10/: journal.h  lesson10.cpp  lesson10.vcxproj
lesson11/: lesson11.sln
lesson11/lesson11/: A.cpp  List.h  hw10_easy.cpp  lesson11.cpp  lesson11.vcxproj  lesson11.vcxproj.filters
lesson12/: Example.sql  cars.db  lesson12.cpp  lesson12.sln  lesson12.vcxproj  lesson12.vcxproj.filters
lesson13/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Db.h  cars.db
lesson16/vectors/: CMakeLists.txt
lesson16/vectors/src/: main.cpp
lesson16/vectors/src/utils/: vec.hpp
lesson16/vectors/test/: CMakeLists.txt  test_main.cpp
lesson17/: lesson17.cpp  lesson17.sln  lesson17.vcxproj
lesson18/: lesson18.cpp  lesson18.sln  lesson18.vcxproj  log.hpp
lesson9/: hw8_mid.cpp  lesson9.cpp  lesson9.vcxproj
(+20 files in other folders)
